--- a/src/app.css
+++ b/src/app.css
@@ -42,7 +42,7 @@ html {
 }
 
 body {
-    background-color: #f5f7fb;
+    /* background-color: #f5f7fb; */
     color: var(--text);
     overflow-x: hidden;
 }
