--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
 body { font-family: 'Roboto', sans-serif; font-size: 13px; line-height: 1.5; color: var(--text); overflow-x: hidden; }
 h1, h2, h3, h4, h5, h6 { font-family: 'Roboto', sans-serif; font-size: 14px; font-weight: 700; margin: 0 0 10px 0; line-height: 1.3; }
 h1 { color: #2c3e50; text-transform: uppercase; letter-spacing: 1px; }
-h2 { color: #34495e; border-bottom: 1px solid #eee; padding-bottom: 5px; }
+h2 { color: #34495e; padding-bottom: 5px; }
 p { font-size: 13px; margin-bottom: 12px; }
 a { color: #3498db; text-decoration: none; }
 a:hover { text-decoration: underline; }
@@ -15,7 +15,6 @@ table { font-size: 13px; }
 th { font-weight: 700; text-align: left; }
 .text-small { font-size: 12px; }
 .text-bold { font-weight: 700; }
-
 
 :root {
     --primary: #3a0ca3; --primary-light: #4361ee; --secondary: #7209b7;
@@ -103,6 +102,8 @@ select { padding: 0.5rem; border: 1px solid #ccc; border-radius: var(--radius-sm
 .card-change.negative { color: var(--danger); }
 /* stats cards */
 
+/* icons */
+.lucide-icon {  width:18px; height: 18px; cursor: pointer;}
 
 /* table */
 .table-card { background-color: white; border-radius: var(--radius); box-shadow: var(--shadow-sm); overflow: hidden; margin-bottom: 25px; animation: fadeInUp 0.7s ease; border: 1px solid rgba(0, 0, 0, 0.03); }
@@ -147,11 +148,11 @@ tr:nth-child(even) { background-color: #f9fafb; }
 .form-card h2, .form-card h3 { margin: 0; }
 .form-card h3 { margin-top: 1rem;  font-weight: 700; color: #1f2937; }
 .form-card p { margin-bottom: 1.5rem;  }
-.input-wrapper { margin-bottom: 1rem; text-align: left; }
+.input-wrapper { text-align: left; }
 
 /* messages */
-.input-error { border-color: #ef4444; }
-.error-text {  color: #ef4444; margin-top: 0.25rem; }
+.input-error { box-shadow: 0 0 0 3px rgba(239, 68, 68, 0.3);}
+.error-text {  color: #ef4444; margin: 3px 0 0 0;}
 .server-error { margin-top: 1rem; color: #ef4444; font-weight: 600; }
 .forgot-password { text-align: right; margin-bottom: 1rem; }
 .forgot-password a { color: #2563eb; text-decoration: none; }
@@ -160,7 +161,25 @@ tr:nth-child(even) { background-color: #f9fafb; }
 .signup a { color: #2563eb; text-decoration: none; }
 
 /* containers */
-.class-container { display: flex; flex-direction: column; justify-content: space-between; align-items: center; padding: 8px 8px 0px 8px; background-color: #ffffff; border-radius: 10px; box-shadow: var(--shadow-sm); margin-top: 15px; }
+.form-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--gray1);
+    border-radius: 10px;
+    box-shadow: var(--shadow-sm);
+    margin-top: 15px;
+    height: 80vh;
+    gap: 6px;
+    /* This replaces margin between children */
+    padding: 6px;
+    /* Add padding to prevent flush edges */
+}
+.form-container-left { display: flex; flex-direction: column; justify-content: space-between; align-items: center; padding: 8px;  border-radius: 10px; box-shadow: var(--shadow-sm); height: 100%; width:30%;  background-color:white; }
+.form-container-right { display: flex; flex-direction: column; justify-content: start; align-items: center; padding: 8px;  border-radius: 10px; box-shadow: var(--shadow-sm); height: 100%; width:70%; background-color:white;}
+
+.class-container { display: flex; padding: 10px 0 10px 0}
 
 /* header  */
 .header { display: flex; justify-content: space-between; align-items: center; height: 70px; padding: 15px; box-shadow: var(--shadow-sm); }
@@ -182,3 +201,54 @@ tr:nth-child(even) { background-color: #f9fafb; }
 /* .menu-item { padding: 0.75rem 1rem; cursor: pointer; display: flex; align-items: center; gap: 0.5rem; }
 .menu-item:hover { background-color: #f3f4f6; } */
 .divider { height: 1px; background-color: #e5e7eb; margin: 0.5rem 0; }
+
+
+/* sidebar */
+.sidebar { width: 300px; max-width: 300px; min-height: 90vh; background: #fff; color: var(--gray5); transition: max-width 0.3s ease; overflow-y: auto; border-right: 1px solid #e2e8f0; font-family: Roboto, sans-serif; font-size: 14px;  scroll-behavior: smooth; }
+.sidebar { overflow-y: hidden; scrollbar-gutter: stable; border-radius: var(--radius); background: var(--light); box-shadow: inset 0 6px 8px -8px rgba(0, 0, 0, 0.3);}
+.sidebar-menu { padding: 10px 0; }
+.menu-group { margin-bottom: 2px; }
+.group-header { display: flex; align-items: center; padding: 10px 15px; cursor: pointer; color: #5a6a85; transition: background 0.2s; margin: 0 3px 0 10px; border-radius: 8px; font-weight: 500;}
+.group-header:hover { background: var(--gray1); }
+.group-header.active { background: var(--gray1); color:#2364f1; }
+.group-header.active .lucide-icon { color: #2364f1; }
+.group-header .lucide-icon{ margin-right: 10px; color: #64748b; flex-shrink: 0; font:bold; font-weight: 900;}
+.header-content { display: flex; justify-content: space-between; align-items: center; width: 100%; }
+.pull-right { margin-left: auto; color: #64748b; transition: transform 0.3s ease; }
+.group-items { border-radius: 8px; }
+.menu-item { padding: 0.75rem 1rem; cursor: pointer; display: flex; align-items: center; gap: 0.5rem; border-left: 2px solid var(--gray2); }
+.menu-item { display: flex; align-items: center; padding: 8px 15px 8px 5px; color: #5a6a85; text-decoration: none; transition: all 0.2s; transition: border-left 0.2s ease, color 0.3s ease; margin-left: 35px; }
+.menu-item:hover { border-left: 2px solid var(--primary-light)  }
+.menu-item.active { border-left: 2px solid var(--primary-light) }
+.menu-item.active span { color: #2364f1; text-decoration: underline;}
+.menu-item span { margin-left: 0.5rem; }
+.menu-item span:hover { color: var(--primary-light); text-decoration: dotted; }
+.sidebar.collapsed { max-width: 0px; }
+/* .sidebar.collapsed .group-header span, .menu-item span { display: none; } */
+.sidebar.collapsed .group-header span,
+.sidebar.collapsed .menu-item span .lucide-icon{ opacity: 0; max-width: 0; overflow: hidden; display: none; transition: opacity 0.1s ease, max-width 0.1s ease;}
+.group-header span,
+.menu-item span { opacity: 1; transition: opacity 0.1s ease, max-width 0.1s ease; }
+/* sidebar scroll */
+.sidebar:hover { overflow-y: auto; }
+.sidebar::-webkit-scrollbar { width: 4px; }
+.sidebar::-webkit-scrollbar-track { background: var(--gray1); border-radius: 25%; }
+.sidebar::-webkit-scrollbar-thumb { background: var(--gray3); border-radius: 25%; }
+.sidebar::-webkit-scrollbar-thumb:hover { background: var(--primary)}
+
+
+
+/* utilities classes */
+.flex-items-center{ display: flex; flex-direction: row; justify-content: center; justify-items: center; align-items: center; gap:0.5rem}
+
+/* utilities classes */
+.flex-container {
+    display: flex;
+    align-items: center;
+    /* Vertical centering */
+    justify-content: center;
+    /* Horizontal centering */
+    gap: 0.1rem;
+    height: 100%;
+    /* Make sure this div has some height */
+}
