updated Subject module working

--- a/src/app.css
+++ b/src/app.css
@@ -235,7 +235,7 @@ tr:nth-child(even) { background-color: #f9fafb; }
 
 /* utilities classes */
 .flex-items-center{ display: flex; flex-direction: row; justify-content: center; justify-items: center; align-items: center; gap:0.5rem}
-
+.required { color: red; }
 /* utilities classes */
 .flex-container {
     display: flex;
