--- a/src/app-input.css
+++ b/src/app-input.css
@@ -1,5 +1,12 @@
 /* prettier-ignore */
-label { font-weight: 600; color: var(--text); }
+label { font-weight: 600; color: var(--text); width: 100%; }
+
+/* input[type="date"] {
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 0.375rem;
+    font-size: 1rem;
+    width: 100%; } */
 
 /* Style all text-based inputs together */
 input[type="text"],
@@ -8,8 +15,11 @@ input[type="password"],
 input[type="tel"],
 input[type="url"],
 input[type="search"],
+input[type="date"],
 select {
 	padding: 0.4rem;
+    width: 100%;
+    height: 35px;
 	border: 1px solid #ccc;
 	border-radius: 0.3rem;
 	background-color: var(--gray0);
@@ -25,6 +35,7 @@ input[type="password"]:focus,
 input[type="tel"]:focus,
 input[type="url"]:focus,
 input[type="search"]:focus,
+input[type="date"]:focus,
 select:focus {
 	outline: none;
 	border-color: var(--info);
@@ -38,6 +49,7 @@ input[type="password"]::placeholder,
 input[type="tel"]::placeholder,
 input[type="url"]::placeholder,
 input[type="search"]::placeholder,
+input[type="date"]::placeholder,
 select::placeholder {
 	color: #9ca3af;
 	opacity: 1;
@@ -50,6 +62,7 @@ input[type="password"]:disabled,
 input[type="tel"]:disabled,
 input[type="url"]:disabled,
 input[type="search"]:disabled,
+input[type="date"]:disabled,
 select:disabled {
 	background-color: #f3f4f6;
 	cursor: not-allowed;
