--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
 /* prettier-ignore */
 * { margin: 0; padding: 0;box-sizing: border-box;}
 
-body { font-family: 'Roboto', sans-serif; font-size: 13px; line-height: 1.5; color: var(--text); overflow-x: hidden; }
+body { font-family: 'Roboto', sans-serif; font-size: 13px;  color: var(--text); overflow-x: hidden; }
 h1, h2, h3, h4, h5, h6 { font-family: 'Roboto', sans-serif; font-size: 14px; font-weight: 700; margin: 0 0 10px 0; line-height: 1.3; }
 h1 { color: #2c3e50; text-transform: uppercase; letter-spacing: 1px; }
 h2 { color: #34495e; padding-bottom: 5px; }
