--- a/src/app-input.css
+++ b/src/app-input.css
@@ -1,12 +1,4 @@
 /* prettier-ignore */
-label { font-weight: 600; color: var(--text); width: 100%; }
-
-/* input[type="date"] {
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 0.375rem;
-    font-size: 1rem;
-    width: 100%; } */
 
 /* Style all text-based inputs together */
 input[type="text"],
@@ -27,6 +19,22 @@ select {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+textarea {
+    padding: 0.4rem;
+    width: 100%;
+    height: 70px;
+    border: 1px solid #ccc;
+    border-radius: 0.3rem;
+    background-color: var(--gray0);
+    resize: vertical;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+textarea:focus { border-color: var(--info); outline: none; box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.2); }
+textarea::placeholder { color: #888; opacity: 1;}
+textarea:disabled {background-color: #f9f9f9; color: #999; cursor: not-allowed;}
 
 /* Focus states for all inputs */
 input[type="text"]:focus,
