css changes and replaced transition time to 0.2 s

--- a/src/app.css
+++ b/src/app.css
@@ -47,7 +47,7 @@
     --radius-sm: 5px;
     --sidebar-width: 260px;
     --header-height: 70px;
-    --transition: all 0.3s ease;
+    --transition: all 0.2s ease;
 
     /* 🖋 Font */
     --ff-sans: 'Inter',
@@ -67,7 +67,7 @@
     /* 🧱 Layout */
     --rad: 0.5rem;
     --shd: 0 2px 6px rgba(0, 0, 0, 0.05);
-    --trn: 0.3s ease;
+    --trn: 0.2s ease;
 
     --link: #2362c7;
     --link-hover: #3a78e4;
@@ -432,7 +432,7 @@ select {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    transition: font-size 0.3s ease;
+    transition: font-size 0.2s ease;
 }
 
 .blue {
@@ -627,7 +627,7 @@ tr:nth-child(even) {
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    transition: all 0.3s ease;
+    transition: all 0.2s ease;
     cursor: pointer;
 } */
 
@@ -668,7 +668,7 @@ tr:nth-child(even) {
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    background-color: var(--clr-bg-4);
+    background-color: var(--clr-bg-5);
     color: #fff;
 }
 
@@ -969,7 +969,7 @@ tr:nth-child(even) {
 .pull-right {
     margin-left: auto;
     color: #64748b;
-    transition: transform 0.3s ease;
+    transition: transform 0.2s ease;
 }
 
 /* sidebar */
@@ -979,7 +979,7 @@ tr:nth-child(even) {
     min-height: 92vh;
     background: #fff;
     color: var(--clr-bg-5);
-    transition: max-width 0.3s ease;
+    transition: max-width 0.2s ease;
     overflow-y: auto;
     border-right: 1px solid #e2e8f0;
     font-family: Roboto, sans-serif;
@@ -1047,7 +1047,7 @@ tr:nth-child(even) {
     max-width: 0;
     overflow: hidden;
     display: none;
-    transition: opacity 0.3s ease, max-width 0.1s ease;
+    transition: opacity 0.2s ease, max-width 0.1s ease;
     transition: all 0.2s ease;
 }
 
@@ -1110,7 +1110,10 @@ tr:nth-child(even) {
 form {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 0.5rem;
+    background-color: #f8f8f8;
+    margin-top: 1rem;
+    /* align-items: baseline; */
 }
 
 .form-grid {
@@ -1200,10 +1203,7 @@ button:disabled {
         height: 50px;
     }
 
-    .btn {
-        width: 100%;
-        justify-content: center;
-    }
+
 
     .card-title {
         flex-direction: column;
@@ -1343,9 +1343,11 @@ button {
 
 .btn {
     font-family: 'Roboto', sans-serif;
+    /* width: 100%; */
     display: inline-flex;
     color: white;
     align-items: center;
+    justify-content: center;
     gap: 5px;
     padding: 0.5rem 0.6rem;
     border: none;
@@ -1353,8 +1355,12 @@ button {
     background-color: var(--clr-pri);
     font-weight: 500;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: all 0.2s ease;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+.btn-secondary {
+    color: white;
+    background-color: var(--clr-bg-5);
 }
 
 
@@ -1415,4 +1421,10 @@ button {
     align-items: center;
     justify-content: center;
     border-radius: 20px;
+}
+.w-50 {
+    width: 50%;
+}
+.w-100 {
+    width: 100%;
 }
