--- a/src/app-input.css
+++ b/src/app-input.css
@@ -15,7 +15,7 @@ textarea {
     height: 35px;
 	border: 1px solid #ccc;
 	border-radius: 0.3rem;
-	background-color: var(--clr-bg-1);
+	background-color: #f5f5f5;
 	transition: all 0.1s ease;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -25,7 +25,20 @@ textarea {
     height: 70px;
     resize: vertical;
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+    transition: border-color 0.2s ease, box-shadow 0.2s ease;
+}
+
+
+input[type="text"]:hover,
+input[type="email"]:hover,
+input[type="password"]:hover,
+input[type="tel"]:hover,
+input[type="url"]:hover,
+input[type="search"]:hover,
+input[type="date"]:hover,
+select:hover,
+textarea:hover {
+    background-color: #eaeaea;
 }
 
 /* Focus states for all inputs */
@@ -41,6 +54,7 @@ textarea:focus {
 	outline: none;
 	border-color: var(--info);
 	box-shadow: 0 0 0 1.5px rgba(59, 130, 246, 0.2);
+    background-color:#ffffff;
 }
 
 /* Placeholder styling */
@@ -67,7 +81,7 @@ input[type="search"]:disabled,
 input[type="date"]:disabled,
 select:disabled,
 textarea:disabled {
-	background-color: #f3f4f6;
+	background-color: #e0e0e0;
 	cursor: not-allowed;
 }
 
