--- a/src/app-input.css
+++ b/src/app-input.css
@@ -13,12 +13,14 @@ textarea {
 	padding: 0.4rem;
     width: 100%;
     height: 35px;
-	border: 1px solid #ccc;
+    font-size: 14px;
+    border: 1px solid #ccc;
 	border-radius: 0.3rem;
 	background-color: #f5f5f5;
 	transition: all 0.1s ease;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+
 }
 
 textarea {
